--- a/style.css
+++ b/style.css
@@ -40,13 +40,13 @@ textarea{
     top:0px;
     z-index: 1;
     height: 2rem;
-    width: fit-content;
+    width: 7.8rem;
     border: 1px solid #000;
     border-radius: 5px;
     font-size: 1.1rem;
     transform: translateY(5px);
     background-color: #C1D8C3;
-    
+    font-family: 'Sanchez', 'Times New Roman', Times, serif;
 }
 .gcf-button-top:active{
     transform: translateY(8px);
@@ -54,7 +54,7 @@ textarea{
 .gcf-button-bottom{
     z-index: 0;
     height: 0.6rem;
-    width: 7.06rem;
+    width: 7.7rem;
     border: 1px solid #000;
     border-radius: 5px;
     background-color: #6A9C89;
